@@ -1,5 +1,7 @@
 package org.molgenis.emx2.cafevariome;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.ArrayList;
 import java.util.List;
 import org.molgenis.emx2.MolgenisException;
@@ -12,10 +14,16 @@ import org.molgenis.emx2.cafevariome.response.RecordResponse;
 
 public class QueryRecord {
 
-  private static final String TABLE_NAME = EntryType.INDIVIDUALS.getName();
+  private static final String TABLE_ID = EntryType.INDIVIDUALS.getId();
+
+  public static RecordResponse post(Schema schema, String json) throws JsonProcessingException {
+    ObjectMapper mapper = new ObjectMapper();
+    CafeVariomeQuery query = mapper.readValue(json, CafeVariomeQuery.class);
+    return post(schema, query);
+  }
 
   public static RecordResponse post(Schema schema, CafeVariomeQuery query) {
-    Table table = schema.getTable(TABLE_NAME);
+    Table table = schema.getTableById(TABLE_ID);
 
     List<String> filters = parseFilters(query);
     int count = QueryEntryType.doCountQuery(table, filters);
@@ -44,12 +52,10 @@ public class QueryRecord {
 
     if (query.hpo() != null && !query.hpo().isEmpty()) {
       String diseaseTermFilter =
-          FilterConceptVP.DISEASE.getGraphQlQuery().formatted(query.hpo().get(0).terms().get(0));
+          FilterConceptVP.DISEASE
+              .getGraphQlQuery()
+              .formatted(query.hpo().getFirst().terms().getFirst());
       filters.add(diseaseTermFilter);
-    }
-
-    if (query.variant() != null) {
-      // todo: implement
     }
 
     return filters;
